--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 layout: base
 title: Home
 ---
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/index.css">
+{% stylesheet index %}
+{% javascript index %}
 
 <div class="navbar-wrapper">
-    <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
     <div class="container">
         {% include navbar.html %}
     </div>
-    <!-- /.container -->
 </div>
 
 <div id="myCarousel" class="carousel slide">
@@ -159,12 +158,3 @@ title: Home
     </footer>
 
 </div>
-
-<script>
-    !function ($) {
-        $(function () {
-            // carousel demo
-            $('#myCarousel').carousel()
-        })
-    }(window.jQuery)
-</script>
