Updated Footer and About Pages

--- a/about/history.html
+++ b/about/history.html
@@ -1,10 +1,270 @@
 ---
 layout: about
 about-navbar-active: history
+title: History & Leadership
 alias: /about
 ---
-<p>The MIT Club of Boston (MITCOB) is dedicated to providing ways for MIT Alumni/ae in the Greater Boston area to know, meet, and work with one another in the expansion of their professional, cultural, and social horizons. The Club also serves to link members more closely to MIT through its programs and other activities.</p>
+<p>The MIT Club of Boston (MITCOB) is dedicated to providing ways for MIT Alumni/ae in the Greater Boston area to know,
+    meet, and work with one another in the expansion of their professional, cultural, and social horizons. The Club also
+    serves to link members more closely to MIT through its programs and other activities.</p>
 
-<p>All MIT alumni/ae, spouses of alumni/ae, current students, parents of current students, and MIT faculty and staff are eligible to get involved in the club. We hope that you consider becoming a member and volunteering to help with our events or program groups.</p>
+<p>All MIT alumni/ae, spouses of alumni/ae, current students, parents of current students, and MIT faculty and staff are
+    eligible to get involved in the club. We hope that you consider becoming a member and volunteering to help with our
+    events or program groups.</p>
 
-<p>The club was originally established in 1946 as the Boston Luncheon Club. It became the MIT Club of Boston in 1961. We are an independent, not-for-profit, 501(c)(3) organization that is member-funded and volunteer-operated.</p>
+<p>The club was originally established in 1946 as the Boston Luncheon Club. It became the MIT Club of Boston in 1961. We
+    are an independent, not-for-profit, 501(c)(3) organization that is member-funded and volunteer-operated.</p>
+<br>
+<br>
+
+<div class="leadership">
+<h3>Board Members</h3>
+<table class="table table-condensed">
+    <tbody>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=87763&sys_tb=1">Lina
+            Morales '82</a></td>
+        <td>President</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=42300&sys_tb=1">Michael
+            Goldberger '83</a></td>
+        <td>Past President</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=132176&sys_tb=1">Jeff
+            Roberts '02</a></td>
+        <td>President Elect</td>
+    </tr>
+    <tr>
+
+        <td><span class="category"><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=90431&sys_tb=1">Valerie
+            Gordeski '05</a></span></td>
+        <td>Clerk, Secretary</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=139426&sys_tb=1">Natalia
+            Olive CE '02</a></td>
+        <td>VP Marketing & Communications</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=98914&sys_tb=1">Doerte
+            Sennecke '06</a></td>
+        <td>VP Finance, Treasurer</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=6&cid=41">Ryan
+            Lester'09</a></td>
+        <td>VP Boston K12 Initiative</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=54445&sys_tb=1">Bonny
+            Kellermann '72</a></td>
+        <td>VP Volunteer Services & Development</td>
+    </tr>
+    <tr>
+
+        <td><span class="category"><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=150385&sys_tb=1">Melissa
+            Webster GM '09</a> <br>
+            </span></td>
+        <td>VP Lecture Series</td>
+    </tr>
+    <tr>
+
+        <td><span class="category"><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=85029http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=85029">Sriram
+            Krishnan '01</a></span></td>
+        <td>VP Lecture Series</td>
+    </tr>
+    <tr>
+        <td><span class="category"><a
+                href="htthttp://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=59723&sys_tb=1">Vipul
+            Bhushan '93</a></span></td>
+        <td>VP of Programs & Events</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=45823">Bruce
+            Enders '69</a></td>
+        <td>At-Large Board Member</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=91113">Matt
+            Haggerty '83</a></td>
+        <td>At-Large Board Member</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=142076&sys_tb=1">David
+            Provost GM '04</a></td>
+        <td>At-Large Board Member</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=102880">Mike
+            Owu '86</a></td>
+        <td>At-Large Board Member</td>
+    </tr>
+    </tbody>
+</table>
+
+
+<h3>Assistant VP's</h3>
+<table class="table table-condensed">
+    <tbody>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=146714">Daniela
+            Cako '09</a></td>
+        <td>Asst. VP Volunteer Recruitment & Engagement</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=102258&sys_tb=1">Jennifer
+            Tang '09</a>&nbsp;<br>
+        </td>
+        <td>Asst. VP Volunteer Recognition & Appreciation</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=144763&sys_tb=1">Clinton
+            Blackburn '08</a></td>
+        <td>Asst. VP Programs</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=13622">Marc
+            Weiss '60</a></td>
+        <td>Asst. VP Communications</td>
+    </tr>
+    </tbody>
+</table>
+
+<h3>Directors</h3>
+<table class="table table-condensed">
+    <tbody>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=140669">Stephanie
+            Silberstein '06</a></td>
+        <td>Social Media Director</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=119854">Doug
+            Lamm '94</a></td>
+        <td>Tech Tours Director</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://alumic.mit.edu/s/1314/03-alumni/wide.aspx?sid=1314&gid=13&pgid=94&cid=256&mid=95460">Alice
+            Fan '07</a></td>
+        <td> Boston Seminar Series Director</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=170635&sys_tb=1">Sun
+            Altbach '11</a></td>
+        <td>Asst. Boston Seminar Series Director</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=150385&sys_tb=1">Melissa
+            Webster GM '09</a>&nbsp;<a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=85029"></a>
+        </td>
+        <td>Boston Energy Series Director</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=56412">Dorothy
+            Curtis '73</a>&nbsp;& <a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=139650">Katie
+            Manty '02</a></td>
+        <td>MetroWest Committee Director</td>
+    </tr>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=144763&sys_tb=1">Clinton
+            Blackburn '08</a> & <a
+                href="http://alumic.mit.edu/s/1314/03-alumni/wide.aspx?sid=1314&gid=13&pgid=94&cid=256&mid=163719&sys_tb=1">Grace
+            Yao '11</a></td>
+        <td>MIT10 Director</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=92823&sys_tb=1">Jessica
+            Liao '07</a> & <a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=144763&sys_tb=1">Clinton
+            Blackburn '08</a></td>
+        <td>A&E Director</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=132284">Christina
+            McDonough '02</a></td>
+        <td>Professional Development Director</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=117521">Tom
+            Klemas '92</a></td>
+        <td>IM Sports & Outings Director</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=87283">Glenn
+            Tournier '04 '06 </a></td>
+        <td>Sponsorship Director</td>
+    </tr>
+    <tr>
+
+        <td>(Vacant)</td>
+        <td>Community Service Director</td>
+    </tr>
+    </tbody>
+</table>
+
+<h3>Alumni Association & Administration</h3>
+<table class="table table-condensed">
+    <tbody>
+    <tr>
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=275&cid=735&tid=14&sys_tb=1&mid=174527">Laura
+            Ruddy</a></td>
+        <td>Assistant Director, Clubs & Regional Programs and Alumni Education</td>
+    </tr>
+    <tr>
+
+        <td><a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=247050">Helen
+            Berry</a></td>
+        <td>&nbsp;Club Administrator</td>
+    </tr>
+    </tbody>
+</table>
+</div>
