Finished Groups Page

--- a/about/groups.html
+++ b/about/groups.html
@@ -3,3 +3,43 @@ layout: about
 about-navbar-active: groups
 title: Groups & Committees
 ---
+<p>The Club has a number of groups and committees tasked with serving the membership. Information about each group is
+    below. If you would like to learn more, feel free to reach out to the group's leader.</p>
+
+<div class="groups">
+    <div class="group">
+        <h3 class="name">Arts & Entertainment</h3>
+
+        <div class="leader"><span class="heading">Leader:</span> <a
+                href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=92823&sys_tb=1">Jessica
+            Liao '07</a></div>
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla erat diam, ultrices non
+            molestie a, porttitor non risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lectus sem,
+            bibendum vel sem varius, tincidunt aliquet justo. Fusce dapibus eu est ut interdum. Duis volutpat lacus eget
+            arcu sagittis faucibus in id massa. Integer pharetra justo in blandit vehicula. Sed egestas velit vel dui
+            consequat cursus. Nullam justo purus, ullamcorper a fermentum eget, porta et tortor. Nullam sit amet porta
+            mi, in gravida metus. Mauris neque justo, congue in dignissim eu, tincidunt a lacus. Phasellus erat felis,
+            elementum et mi ut, venenatis consequat lorem. Donec vel est mattis, pretium orci sit amet, fringilla
+            sapien.
+        </div>
+    </div>
+</div>
+
+<div class="groups">
+    <div class="group">
+        <h3 class="name">Communications</h3>
+
+        <div class="leader"><span class="heading">Leader:</span> <a
+            href="http://boston.alumclub.mit.edu/s/1314/clubs-classes-interior.aspx?sid=1314&gid=10&pgid=94&cid=256&mid=144763&sys_tb=1">Clinton
+            Blackburn '08</a></div>
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla erat diam, ultrices non
+            molestie a, porttitor non risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lectus sem,
+            bibendum vel sem varius, tincidunt aliquet justo. Fusce dapibus eu est ut interdum. Duis volutpat lacus eget
+            arcu sagittis faucibus in id massa. Integer pharetra justo in blandit vehicula. Sed egestas velit vel dui
+            consequat cursus. Nullam justo purus, ullamcorper a fermentum eget, porta et tortor. Nullam sit amet porta
+            mi, in gravida metus. Mauris neque justo, congue in dignissim eu, tincidunt a lacus. Phasellus erat felis,
+            elementum et mi ut, venenatis consequat lorem. Donec vel est mattis, pretium orci sit amet, fringilla
+            sapien.
+        </div>
+    </div>
+</div>
