Corrected Title for Scholarship Fund Page

--- a/about/scholarship.html
+++ b/about/scholarship.html
@@ -1,7 +1,7 @@
 ---
 layout: about
 about-navbar-active: scholarship
-title: Scholarship
+title: Scholarship Fund
 ---
 <div class="scholarship">
     <p>The MIT Club of Boston Endowed Scholarship Fund was established on December 2, 1985 by an initial gift of the MIT
