Made Logos Clickable

--- a/about/branding.html
+++ b/about/branding.html
@@ -19,9 +19,9 @@ title: Branding
 
     <div class="logos">
         <div class="row">
-            <div class="span3"><img src="{% asset_path mitcob_logo_black.png %}" class="logo"/></div>
-            <div class="span3"><img src="{% asset_path mitcob_logo_red.png %}" class="logo"/></div>
-            <div class="span3"><img src="{% asset_path mitcob_logo_gray.png %}" class="logo"/></div>
+            <div class="span3"><a href="{% asset_path mitcob_logo_black.png %}"><img src="{% asset_path mitcob_logo_black.png %}" class="logo"/></a></div>
+            <div class="span3"><a href="{% asset_path mitcob_logo_red.png %}"><img src="{% asset_path mitcob_logo_red.png %}" class="logo"/></a></div>
+            <div class="span3"><a href="{% asset_path mitcob_logo_gray.png %}"><img src="{% asset_path mitcob_logo_gray.png %}" class="logo"/></a></div>
         </div>
     </div>
 </div>
